--- a/src/Translation/EN/translation.json
+++ b/src/Translation/EN/translation.json
@@ -13,7 +13,7 @@
             "illustration" : "Illustration",
             "illustration-text" : "Illustration service for agencies, creating unique & eye-catching visuals for various media. From concept sketches to final art, we bring ideas to life.",
             "graphic-design" : "Graphic Design",
-            "graphic-text" : "Graphic design agency specializing in creating visually impactful designs for branding, marketing materials, packaging, and more. Elevating your message."
+            "graphic-text" : "Transform your brand with our graphic design services. From logos to marketing materials, we craft visual solutions that communicate your message effectively."
         }
     }
 }
