Texto de equipo
Texto de equipo en inglés y español y corrección de número de caracteres.

--- a/src/Translation/EN/translation.json
+++ b/src/Translation/EN/translation.json
@@ -14,6 +14,14 @@
             "illustration-text" : "Illustration service for agencies, creating unique & eye-catching visuals for various media. From concept sketches to final art, we bring ideas to life.",
             "graphic-design" : "Graphic Design",
             "graphic-text" : "Transform your brand with our graphic design services. From logos to marketing materials, we craft visual solutions that communicate your message effectively."
+        },
+        "team" : {
+            "sandra" : "Abigail P",
+            "sandra-text" : "Head designer, UI designer and freelancer",
+            "kitzia" : "Kitzia P",
+            "kitzia-text" : "Front-end web designer and freelancer",
+            "team-description" : "The team",
+            "text-team" : "We specialize in providing web design solutions focused on UI design, illustration and graphic design. Our diverse skills and passion for design allow us to bring your vision to life and create a visually stunning online presence that engages and converts your audience. Let us elevate your brand through creativity and strategic design."
         }
     }
 }
