--- a/src/Translation/EN/translation.json
+++ b/src/Translation/EN/translation.json
@@ -61,6 +61,11 @@
                 "header" : "BTHC",
                 "text" : "We can apply it all in one website! BTHC wanted to offer more benefits to their users, they needed all the concept art, and web pages. NFTs character design, illustrations, scenarios, GIFs, web design, and campaign branding.",
                 "button" : "See More"
+            },
+            "brawler-slider" : {
+                "header" : "Brawler T-Shirts Logo Design",
+                "text" : "Here's a beautiful custom logo for a martial arts focused t-shirt brand. Elevate your brand with a custom logo design. Our team creates a unique and memorable symbol that represents your store's values and personality - stand out with a professional logo today!",
+                "button" : "See More"
             }
     },
     "projects" : {
