--- a/src/Translation/EN/translation.json
+++ b/src/Translation/EN/translation.json
@@ -66,6 +66,26 @@
                 "header" : "Brawler T-Shirts Logo Design",
                 "text" : "Here's a beautiful custom logo for a martial arts focused t-shirt brand. Elevate your brand with a custom logo design. Our team creates a unique and memorable symbol that represents your store's values and personality - stand out with a professional logo today!",
                 "button" : "See More"
+            },
+            "caliope-slider" : {
+                "header" : "Caliope Logo Design",
+                "text" : "Here's a beautiful custom logo for a women's clothing brand. Elevate your brand with a custom logo design. Our team creates a unique and memorable symbol that represents your store's values and personality - stand out with a professional logo today!",
+                "button" : "See More"
+            },
+            "chilanguerias-slider" : {
+                "header" : "Chilanguerias",
+                "text" : "Make your clothing store stand out with custom illustrations. Our team creates eye-catching designs for your website, packaging, and advertising materials. Give your brand a unique personality and appeal with custom illustrations!",
+                "button" : "See More"
+            },
+            "helenafc-slider" : {
+                "header" : "Helena Fernandez-Cavada",
+                "text" : "We know how to make a friendly website with Cargo, streamline your business with a professional Cargo website design. Our team creates, custom websites that improve the customer experience and drive online growth.",
+                "button" : "See More"
+            },
+            "driirp-slider" : {
+                "header" : "Deep Roots Institute",
+                "text" : "We can transcend web design from Figma to reality with Skuarespace. Here is Deep Roots Institute, a minimalist yet sophisticated website that empowers you to make a positive impact on the environment by becoming a part of a vibrant community. You can unlock boundless opportunities!",
+                "button" : "See More"
             }
     },
     "projects" : {
