--- a/src/Translation/ES/translation.json
+++ b/src/Translation/ES/translation.json
@@ -59,6 +59,31 @@
             "header" : "BTHC",
             "text" : "¡Podemos aplicarlo todo en un solo sitio web! BTHC quería ofrecer más beneficios a sus usuarios, necesitaban todo el arte conceptual, y páginas web. NFTs diseño de personajes, ilustraciones, escenarios, GIFs, diseño web, y branding de la campaña.",
             "button" : "Ver más"
+        },
+        "brawler-slider-es" : {
+            "header" : "Brawler T-Shirts Diseño de Logo",
+            "text" : "Hermoso logotipo personalizado para una marca de camisetas centrada en las artes marciales. Puedes elevar tu marca con un diseño personalizado. Creamos un símbolo único y memorable que representa los valores y la personalidad de tu tienda ¡destaca con un logotipo profesional hoy mismo!",
+            "button" : "Ver más"
+        },
+        "caliope-slider-es" : {
+            "header" : "Caliope Diseño de Logo",
+            "text" : "Precioso logotipo personalizado para una marca de ropa femenina. Eleve su marca con un diseño de logotipo personalizado. Nuestro equipo crea un símbolo único y memorable que representa los valores y la personalidad de tu tienda ¡destaca con un logotipo profesional hoy mismo!",
+            "button" : "See More"
+        },
+        "chilanguerias-slider-es" : {
+            "header" : "Chilanguerias",
+            "text" : "Chilanguerias necesitaba que su tienda de ropa destaque con ilustraciones personalizadas. Nuestro equipo crea diseños llamativos para tu sitio web y material publicitario. ¡Dale a tu marca una personalidad y un atractivo únicos con ilustraciones personalizadas!",
+            "button" : "See More"
+        },
+        "helenafc-slider-es" : {
+            "header" : "Helena Fernandez-Cavada",
+            "text" : "Para Helena creamos un portafolio hermoso y elegante, sabemos cómo hacer un sitio web amigable con Cargo, agiliza tu negocio con un diseño de sitio web profesional. Nuestro equipo crea sitios web personalizados que mejoran la experiencia del cliente e impulsan el crecimiento en línea.",
+            "button" : "See More"
+        },
+        "driirp-slider-es" : {
+            "header" : "Deep Roots Institute",
+            "text" : "Podemos trascender el diseño web de Figma a la realidad con Squarespace. He aquí Deep Roots Institute, un sitio web minimalista pero sofisticado que te permite influir positivamente en el medio ambiente formando parte de una vibrante comunidad. ¡Puedes desbloquear oportunidades ilimitadas!",
+            "button" : "See More"
         }
     },
     "proyectos" : {
