--- a/src/Translation/EN/translation.json
+++ b/src/Translation/EN/translation.json
@@ -64,22 +64,22 @@
             },
             "brawler-slider" : {
                 "header" : "Brawler T-Shirts Logo Design",
-                "text" : "Here's a beautiful custom logo for a martial arts focused t-shirt brand. Elevate your brand with a custom logo design. Our team creates a unique and memorable symbol that represents your store's values and personality - stand out with a professional logo today!",
+                "text" : "Beautiful custom logo for a t-shirt brand focused on martial arts. You can elevate your brand with a custom design. We create a unique and memorable symbol that represents the values and personality of your store. Stand out with a professional logo today!",
                 "button" : "See More"
             },
             "caliope-slider" : {
                 "header" : "Caliope Logo Design",
-                "text" : "Here's a beautiful custom logo for a women's clothing brand. Elevate your brand with a custom logo design. Our team creates a unique and memorable symbol that represents your store's values and personality - stand out with a professional logo today!",
+                "text" : "Beautiful custom logo for a women's clothing brand. Elevate your brand with a custom logo design. Our team creates a unique and memorable symbol that represents your store's values and personality - stand out with a professional logo today!",
                 "button" : "See More"
             },
             "chilanguerias-slider" : {
                 "header" : "Chilanguerias",
-                "text" : "Make your clothing store stand out with custom illustrations. Our team creates eye-catching designs for your website, packaging, and advertising materials. Give your brand a unique personality and appeal with custom illustrations!",
+                "text" : "Chilanguerias needed their clothing store to stand out with custom illustrations. Our team creates eye-catching designs for your website and advertising materials. Give your brand a unique personality and appeal with custom illustrations!",
                 "button" : "See More"
             },
             "helenafc-slider" : {
                 "header" : "Helena Fernandez-Cavada",
-                "text" : "We know how to make a friendly website with Cargo, streamline your business with a professional Cargo website design. Our team creates, custom websites that improve the customer experience and drive online growth.",
+                "text" : "For Helena we create a beautiful and elegant portfolio, we know how to make a Cargo friendly website, streamline your business with a professional website design. Our team creates custom websites that enhance the customer experience and drive online growth.",
                 "button" : "See More"
             },
             "driirp-slider" : {
