--- a/src/Translation/EN/translation.json
+++ b/src/Translation/EN/translation.json
@@ -23,7 +23,7 @@
         },
         "cta" : {
             "title" : "Let's talk!",
-            "text" : "Lorem ipsum dolor sit amet consectetur. Euismod a id neque felis aliquam maecenas dictum. Pellentesque sit arcu in etiam sapien tempor vitae non et. Lectus dictum velit integer eu auctor sollicitudin molestie pellentesque. Id commodo tortor sapien pharetra in tincidunt eu."
+            "text" : "Connect with us! Our contact section is your gateway to professional design services. Submit your project inquiry, ask questions, or just say hello. We're here to help and can't wait to hear from you."
         } 
     },
 
