--- a/src/Translation/EN/translation.json
+++ b/src/Translation/EN/translation.json
@@ -2,7 +2,7 @@
     "test-text" : "Light/Dark mode app",
     "home" : {
         "hero" : "Crafting intuitive and aesthetically pleasing digital experiences",
-        "button-intro" : "Read more",
+        "button-intro" : "Go down!",
         "welcome" : "Welcome to ",
         "intro" : "A full-service digital visual design agency where creativity meets functionality. Our team craft visually stunning and user-centered experiences for websites, mobile apps, and digital products. Let's partner to bring your vision to life and leave a lasting impact on your audience.",
         "work": {
