--- a/src/Translation/ES/translation.json
+++ b/src/Translation/ES/translation.json
@@ -2,7 +2,7 @@
     "test-text" : "App con modo Brillante/Oscuro",
     "home" : {
         "hero" : "Creamos experiencias digitales intuitivas y estéticamente agradables",
-        "button-intro" : "Leer más",
+        "button-intro" : "Ve abajo!",
         "welcome" : "Llegaste a ",
         "intro" : "Una agencia de diseño visual digital donde la creatividad se une a la funcionalidad. Nuestro equipo crea experiencias visualmente impresionantes y centradas en el usuario para sitios web, aplicaciones móviles y productos digitales. Colaboremos para dar vida a tu visión y dejar un impacto duradero en tu audiencia.",
         "work" : {
